--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2269,12 +2269,12 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
 
 .btn-outline-primary {
-  color: #007bff;
-  border-color: #007bff; }
+  color: #0abd7d;
+  border-color: #0abd7d; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #0abd7d;
+    border-color: #0abd7d; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); }
@@ -8011,10 +8011,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #0075f6; }
+  color: #0abd7d; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #0075f6;
+    color: #0abd7d;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -8082,7 +8082,7 @@ h1, h2, h3, h4, h5,
         height: 2px;
         bottom: 0;
         left: 0;
-        background: #0075f6;
+        background: #0abd7d;
         visibility: visible;
         -webkit-transform: scaleX(0);
         -moz-transform: scaleX(0);
@@ -8110,12 +8110,12 @@ h1, h2, h3, h4, h5,
         color: #fff; } }
   .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
     color: #fff;
-    border: 1px solid #0075f6;
+    border: 1px solid #0abd7d;
     padding-top: .7rem;
     padding-bottom: .7rem;
     padding-left: 18px;
     padding-right: 18px;
-    background: #0075f6;
+    background: #0abd7d;
     margin-top: 0;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -8125,15 +8125,15 @@ h1, h2, h3, h4, h5,
       display: inline-block;
       color: #fff; }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-      background: #0075f6;
-      border: 1px solid #0075f6; }
+      background: #0abd7d;
+      border: 1px solid #0abd7d; }
   .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored a {
     border: 1px solid #a0f669;
     background: #a0f669 !important; }
   .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active {
     background: transparent;
     background: none;
-    color: #0075f6; }
+    color: #0abd7d; }
     .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active span:before {
       visibility: visible;
       -webkit-transform: scaleX(1);
@@ -8141,7 +8141,7 @@ h1, h2, h3, h4, h5,
       transform: scaleX(1); }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-      color: #0075f6; } }
+      color: #0abd7d; } }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -8152,7 +8152,7 @@ h1, h2, h3, h4, h5,
     letter-spacing: .1em; }
     .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
       text-decoration: none;
-      color: #0075f6;
+      color: #0abd7d;
       outline: none !important; }
   .ftco-navbar-light.scrolled {
     position: fixed;
@@ -8170,10 +8170,10 @@ h1, h2, h3, h4, h5,
         padding-right: 0 !important;
         padding-bottom: 20px !important; } }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #0075f6 !important; }
+      color: #0abd7d !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
-      background: #0075f6;
+      background: #0abd7d;
       border: none !important;
       padding-top: 0.5rem !important;
       padding-bottom: .5rem !important;
@@ -8207,7 +8207,7 @@ h1, h2, h3, h4, h5,
     .ftco-navbar-light.scrolled .nav-link {
       color: #000000 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #0075f6 !important; }
+        color: #0abd7d !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -8298,7 +8298,7 @@ h1, h2, h3, h4, h5,
       right: 0;
       width: 40%;
       height: 80%;
-      background: #77b7ff;
+      background: #b8fea4;
       opacity: 1;
       content: '';
       z-index: -1; }
@@ -8327,7 +8327,7 @@ h1, h2, h3, h4, h5,
           .owl-carousel.home-slider .slider-item .slider-text {
             text-align: center; } }
         .owl-carousel.home-slider .slider-item .slider-text .one-third {
-          width: 80%;
+          width: 60%;
           position: relative;
           height: 650px;
           z-index: -1;
@@ -8407,7 +8407,7 @@ h1, h2, h3, h4, h5,
           font-size: 14px;
           letter-spacing: 3px;
           text-transform: uppercase;
-          color: #0075f6; }
+          color: #0abd7d; }
         .owl-carousel.home-slider .slider-item .slider-text .text {
           position: relative;
           z-index: 1; }
@@ -8418,7 +8418,7 @@ h1, h2, h3, h4, h5,
           font-weight: 800; }
           .owl-carousel.home-slider .slider-item .slider-text h1 span {
             font-weight: 800;
-            color: #0075f6; }
+            color: #0abd7d; }
           @media (max-width: 991.98px) {
             .owl-carousel.home-slider .slider-item .slider-text h1 {
               color: #fff;
@@ -8440,7 +8440,7 @@ h1, h2, h3, h4, h5,
               color: rgba(255, 255, 255, 0.7);
               font-size: 23px; } }
         .owl-carousel.home-slider .slider-item .slider-text .btn-custom {
-          bordeR: 1px solid #0075f6;
+          bordeR: 1px solid #0abd7d;
           padding: 5px 20px;
           text-transform: uppercase;
           font-size: 12px;
@@ -8483,7 +8483,7 @@ h1, h2, h3, h4, h5,
           .owl-carousel.home-slider .owl-nav .owl-prev:hover span:before, .owl-carousel.home-slider .owl-nav .owl-prev:focus span:before {
             font-size: 20px;
             margin-top: 7px;
-            color: #0075f6; }
+            color: #0abd7d; }
       .owl-carousel.home-slider .owl-nav .owl-next {
         top: 0 !important;
         right: 0 !important; }
@@ -8496,7 +8496,7 @@ h1, h2, h3, h4, h5,
           .owl-carousel.home-slider .owl-nav .owl-next:hover span:before, .owl-carousel.home-slider .owl-nav .owl-next:focus span:before {
             font-size: 24px;
             margin-top: 7px;
-            color: #0075f6; }
+            color: #0abd7d; }
     .owl-carousel.home-slider .owl-dots {
       position: absolute;
       left: 0;
@@ -8576,9 +8576,9 @@ h1, h2, h3, h4, h5,
     .slider-text .breadcrumbs span a {
       color: black; }
       .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-        color: #0075f6; }
+        color: #0abd7d; }
         .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-          color: #0075f6; }
+          color: #0abd7d; }
 
 .slider-text .bread {
   font-weight: 700;
@@ -8588,7 +8588,7 @@ h1, h2, h3, h4, h5,
   background: #f8f9fa !important; }
 
 .bg-primary {
-  background: #0075f6; }
+  background: #0abd7d; }
 
 .btn {
   cursor: pointer;
@@ -8602,11 +8602,11 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #0075f6;
-    border: 1px solid #0075f6 !important;
+    background: #0abd7d;
+    border: 1px solid #0abd7d !important;
     color: #fff !important; }
     .btn.btn-primary:hover {
-      border: 1px solid #0075f6;
+      border: 1px solid #0abd7d;
       background: #9ff669;
       background: -moz-linear-gradient(-45deg, #9ff669 0%, #31de79 100%);
       background: -webkit-gradient(left top, right bottom, color-stop(0%, #9ff669), color-stop(100%, #31de79));
@@ -8617,14 +8617,14 @@ h1, h2, h3, h4, h5,
       background: -o-linear-gradient(315deg, #9ff669 0%, #31de79 100%);
       background: linear-gradient(135deg, #9ff669 0%, #31de79 100%);
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9ff669', endColorstr='#31de79', GradientType=1 );
-      color: #0075f6; }
+      color: #0abd7d; }
     .btn.btn-primary.btn-outline-primary {
-      border: 2px solid #0075f6 !important;
+      border: 2px solid #0abd7d !important;
       background: transparent !important;
-      color: #0075f6 !important; }
+      color: #0abd7d !important; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 2px solid transparent !important;
-        background: #0075f6 !important;
+        background: #0abd7d !important;
         color: #fff !important; }
   .btn.btn-secondary {
     background: #a0f669 !important;
@@ -8674,7 +8674,7 @@ h1, h2, h3, h4, h5,
     bottom: 0;
     content: '';
     z-index: -1;
-    background: #0075f6;
+    background: #0abd7d;
     margin-top: 40px;
     margin-left: -60px;
     opacity: 1; }
@@ -8822,7 +8822,7 @@ h1, h2, h3, h4, h5,
     font-weight: 400; }
 
 .ftco-hireme {
-  background: #0075f6; }
+  background: #0abd7d; }
   .ftco-hireme h2 {
     color: #fff;
     font-size: 40px;
@@ -8866,7 +8866,7 @@ h1, h2, h3, h4, h5,
     bottom: 0;
     content: '';
     opacity: 0;
-    background: #0075f6;
+    background: #0abd7d;
     z-index: -1;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
@@ -8947,7 +8947,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #0075f6 !important; }
+  background: #0abd7d !important; }
 
 .about-author .desc h3 {
   font-size: 24px; }
@@ -8970,7 +8970,7 @@ textarea.form-control {
 
 .ftco-footer {
   font-size: 16px;
-  background: #0075f6;
+  background: #0abd7d;
   padding: 7em 0;
   z-index: 0; }
   .ftco-footer .ftco-footer-logo {
@@ -9033,7 +9033,7 @@ textarea.form-control {
   .footer-small-nav > li a {
     margin: 0 10px 10px 0; }
     .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
-      color: #0075f6; }
+      color: #0abd7d; }
 
 .media .ftco-icon {
   width: 100px; }
@@ -9204,7 +9204,7 @@ textarea.form-control {
       .blog-entry .text .heading a {
         color: #000000; }
         .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-          color: #0075f6; }
+          color: #0abd7d; }
   .blog-entry .meta {
     display: inline-block;
     margin-right: 5px;
@@ -9217,7 +9217,7 @@ textarea.form-control {
     .blog-entry .meta a {
       color: #0075f6; }
       .blog-entry .meta a:hover {
-        color: #0075f6; }
+        color: #0abd7d; }
 
 .block-23 ul {
   padding: 0; }
@@ -9264,7 +9264,8 @@ textarea.form-control {
 
 .contact-section .img {
   width: 100%;
-  background-position: top center; }
+  height: 100%;
+  background-position:  center; }
 
 .contact-section .contact-info p a {
   color: #fff; }
@@ -9299,7 +9300,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color: #000000; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #0075f6; }
+        color: #0abd7d; }
   .block-21 .text .meta > div {
     display: inline-block;
     margin-right: 5px; }
